--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,10 +23,10 @@
     <input type="email" id="email" name="email" required><br><br>
 
     <label for="mobile_Number">Mobile Number:</label>
-    <input type="number" id="mobile_Number" name="mobile_Number" required><br><br>
+    <input type="text" id="mobile_Number" name="mobile_Number" required><br><br>
 
     <label for="medical_Card_Number">Medical Card Number:</label>
-    <input type="number" id="medical_Card_Number" name="medical_Card_Number" required><br><br>
+    <input type="text" id="medical_Card_Number" name="medical_Card_Number" required><br><br>
 
     <label for="PPSN_Number">PPSN Number:</label>
     <input type="text" id="PPSN_Number" name="PPSN_Number" required><br><br>
