--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <h1>Registration Form</h1>
+
+<form id="registrationForm" action="/registration_page/create" method="post">
 <form action="/registration/submit" method="post">
     <label for="fullName">Full Name:</label>
     <input type="text" id="fullName" name="fullName" required><br><br>
@@ -22,7 +24,7 @@
     <input type="email" id="email" name="email" required><br><br>
 
     <label for="mobile_Number">Mobile Number:</label>
-    <input type="tel" id="mobile_Number" name="mobile_Number" required><br><br>
+    <input type="text" id="mobile_Number" name="mobile_Number" required><br><br>
 
     <label for="medical_Card_Number">Medical Card Number:</label>
     <input type="text" id="medical_Card_Number" name="medical_Card_Number" required><br><br>
@@ -33,7 +35,37 @@
     <label for="previous_GP_Name_and_address">Previous GP Name and Address:</label>
     <input type="text" id="previous_GP_Name_and_address" name="previous_GP_Name_and_address" required><br><br>
 
-    <button type="submit">Submit</button>
+    <input type="submit" value="Submit">
 </form>
+
+<script>
+    document.getElementById("registrationForm").addEventListener("submit", function (event) {
+        event.preventDefault(); // Prevent the default form submission
+
+        // Collect form data
+        var formData = new FormData(this);
+
+        // Send a POST request to the server to save the data
+        fetch('/registration_page/create', {
+            method: 'POST',
+            body: formData,
+        })
+        .then(response => {
+            if (response.status === 201) {
+                // Successful submission, redirect to the success page
+                window.location.href = '/success.html';
+            } else {
+                // Handle errors here
+                console.error('Failed to submit the form.');
+            }
+        })
+        .catch(error => {
+            console.error('An error occurred:', error);
+        });
+    });
+</script>
+
+</body>
+</html>
 </body>
 </html>
