--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,6 @@
 <h1>Registration Form</h1>
 
 <form id="registrationForm" action="/registration_page/create" method="post">
-<form action="/registration/submit" method="post">
     <label for="fullName">Full Name:</label>
     <input type="text" id="fullName" name="fullName" required><br><br>
 
@@ -33,22 +32,27 @@
     <input type="text" id="PPSN_Number" name="PPSN_Number" required><br><br>
 
     <label for="previous_GP_Name_and_address">Previous GP Name and Address:</label>
-    <input type="text" id="previous_GP_Name_and_address" name="previous_GP_Name_and_address" required><br><br>
+    <textarea id="previous_GP_Name_and_address" name="previous_GP_Name_and_address" rows="4" required></textarea><br><br>
 
     <input type="submit" value="Submit">
 </form>
 
-<script>
+<script type="text/javascript">
     document.getElementById("registrationForm").addEventListener("submit", function (event) {
         event.preventDefault(); // Prevent the default form submission
 
         // Collect form data
         var formData = new FormData(this);
 
+        // Create headers with the appropriate content type
+        var headers = new Headers();
+        headers.append('Content-Type', 'application/x-www-form-urlencoded');
+
         // Send a POST request to the server to save the data
         fetch('/registration_page/create', {
             method: 'POST',
             body: formData,
+            headers: headers,  // Set the content type here
         })
         .then(response => {
             if (response.status === 201) {
@@ -64,8 +68,5 @@
         });
     });
 </script>
-
-</body>
-</html>
 </body>
 </html>
