--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,7 +36,6 @@
 
     <input type="submit" value="Submit">
 </form>
-
 <script type="text/javascript">
     document.getElementById("registrationForm").addEventListener("submit", function (event) {
         event.preventDefault(); // Prevent the default form submission
@@ -44,15 +43,20 @@
         // Collect form data
         var formData = new FormData(this);
 
-        // Create headers with the appropriate content type
-        var headers = new Headers();
-        headers.append('Content-Type', 'application/x-www-form-urlencoded');
+        // Convert FormData to JSON format
+        var formObject = {};
+        formData.forEach((value, key) => {
+            formObject[key] = value;
+        });
+        var jsonData = JSON.stringify(formObject);
 
         // Send a POST request to the server to save the data
-        fetch('/registration_page/create', {
+        fetch('/submit', {
             method: 'POST',
-            body: formData,
-            headers: headers,  // Set the content type here
+            body: jsonData,
+            headers: {
+                    'Content-Type': 'application/json'
+            },
         })
         .then(response => {
             if (response.status === 201) {
@@ -68,5 +72,6 @@
         });
     });
 </script>
+
 </body>
 </html>
