--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,40 +3,52 @@
 <head>
     <title>Registration Form</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 <h1>Registration Form</h1>
 
-
+<img src="C:\images\girls.jpg" alt="Girl with laptop" width="200" height="100">
 <form id="registrationForm" class="registrationForm" action="/registration_page/create" method="post">
+    <div class="container">
     <label for="fullName">Full Name:</label>
     <input type="text" id="fullName" name="fullName" required><br><br>
-
+</div>
+    <div class="container">
     <label for="DOB">Date of Birth:</label>
     <input type="date" id="DOB" name="DOB" required><br><br>
-
+    </div>
+    <div class="container">
     <label for="address">Address:</label>
     <input type="text" id="address" name="address" required><br><br>
-
+    </div>
+    <div class="container">
     <label for="EIR_Code">EIR Code:</label>
     <input type="text" id="EIR_Code" name="EIR_Code" required><br><br>
-
+    </div>
+    <div class="container">
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required><br><br>
-
+    </div>
+    <div class="container">
     <label for="mobile_Number">Mobile Number:</label>
     <input type="text" id="mobile_Number" name="mobile_Number" required><br><br>
-
+    </div>
+    <div class="container">
     <label for="medical_Card_Number">Medical Card Number:</label>
     <input type="text" id="medical_Card_Number" name="medical_Card_Number" required><br><br>
-
+    </div>
+    <div class="container">
     <label for="PPSN_Number">PPSN Number:</label>
     <input type="text" id="PPSN_Number" name="PPSN_Number" required><br><br>
-
+    </div>
+    <div class="container">
     <label for="previous_GP_Name_and_address">Previous GP Name and Address:</label>
     <textarea id="previous_GP_Name_and_address" name="previous_GP_Name_and_address" rows="4" required></textarea><br><br>
-
+    </div>
+    <div class="container">
     <input type="submit" id="submit" value="Submit">
+    </div>
 </form>
 
 <script type="text/javascript">
