--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,53 +3,63 @@
 <head>
     <title>Registration Form</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 </head>
-<body>
-<h1>Registration Form</h1>
-
-<img src="C:\images\girls.jpg" alt="Girl with laptop" width="200" height="100">
-<form id="registrationForm" class="registrationForm" action="/registration_page/create" method="post">
-    <div class="container">
-    <label for="fullName">Full Name:</label>
-    <input type="text" id="fullName" name="fullName" required><br><br>
+<body class="body">
+<div class="container regFormContainer">
+<h1 class="text-center mb-5">Registration Form</h1>
+<div class="row">
+    <div class="col-9">
+        <form id="registrationForm" class="registrationForm" action="/registration_page/create" method="post">
+            <div class="row mb-3">
+                <label for="fullName" class="form-label">Full Name:</label>
+                <input type="text" id="fullName" name="fullName" required class="form-control">
+            </div>
+            <div class="row mb-3">
+                <label for="DOB" class="form-label">Date of Birth:</label>
+                <input type="date" id="DOB" name="DOB" required class="form-control">
+            </div>
+            <div class="row mb-3">
+                <label for="address" class="form-label">Address:</label>
+                <input type="text" id="address" name="address" required class="form-control">
+            </div>
+            <div class="row mb-3">
+                <label for="EIR_Code" class="form-label">EIR Code:</label>
+                <input type="text" id="EIR_Code" name="EIR_Code" required class="form-control">
+            </div>
+            <div class="row mb-3">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" id="email" name="email" required class="form-control">
+            </div>
+            <div class="row mb-3">
+                <label for="mobile_Number" class="form-label">Mobile Number:</label>
+                <input type="text" id="mobile_Number" name="mobile_Number" required class="form-control">
+            </div>
+            <div class="row mb-3">
+                <label for="medical_Card_Number" class="form-label">Medical Card Number:</label>
+                <input type="text" id="medical_Card_Number" name="medical_Card_Number" required class="form-control">
+            </div>
+            <div class="row mb-3">
+                <label for="PPSN_Number" class="form-label">PPSN Number:</label>
+                <input type="text" id="PPSN_Number" name="PPSN_Number" required class="form-control">
+            </div>
+            <div class="row mb-3">
+                <label for="previous_GP_Name_and_address" class="form-label">Previous GP Name and Address:</label>
+                <textarea id="previous_GP_Name_and_address" name="previous_GP_Name_and_address" rows="4" required class="form-control"></textarea>
+            </div>
+            <div class="row mb-3 justify-content-end">
+                <div class="col-auto">
+                    <input type="submit" id="submit" value="Submit" class="btn btn-primary">
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="col-3"><img src="girls.jpg" alt="Girl with laptop" ></div>
 </div>
-    <div class="container">
-    <label for="DOB">Date of Birth:</label>
-    <input type="date" id="DOB" name="DOB" required><br><br>
-    </div>
-    <div class="container">
-    <label for="address">Address:</label>
-    <input type="text" id="address" name="address" required><br><br>
-    </div>
-    <div class="container">
-    <label for="EIR_Code">EIR Code:</label>
-    <input type="text" id="EIR_Code" name="EIR_Code" required><br><br>
-    </div>
-    <div class="container">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
-    </div>
-    <div class="container">
-    <label for="mobile_Number">Mobile Number:</label>
-    <input type="text" id="mobile_Number" name="mobile_Number" required><br><br>
-    </div>
-    <div class="container">
-    <label for="medical_Card_Number">Medical Card Number:</label>
-    <input type="text" id="medical_Card_Number" name="medical_Card_Number" required><br><br>
-    </div>
-    <div class="container">
-    <label for="PPSN_Number">PPSN Number:</label>
-    <input type="text" id="PPSN_Number" name="PPSN_Number" required><br><br>
-    </div>
-    <div class="container">
-    <label for="previous_GP_Name_and_address">Previous GP Name and Address:</label>
-    <textarea id="previous_GP_Name_and_address" name="previous_GP_Name_and_address" rows="4" required></textarea><br><br>
-    </div>
-    <div class="container">
-    <input type="submit" id="submit" value="Submit">
-    </div>
-</form>
+
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 <script type="text/javascript">
     document.getElementById("registrationForm").addEventListener("submit", function (event) {
@@ -87,5 +97,6 @@
         });
     });
 </script>
+
 </body>
 </html>
