--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,60 +6,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 </head>
-<body>
-<h1>Registration Form</h1>
-
-<form id="registrationForm" action="/registration_page/create" method="post">
-    <label for="fullName">Full Name:</label>
-    <input type="text" id="fullName" name="fullName" required><br><br>
-
-    <label for="DOB">Date of Birth:</label>
-    <input type="date" id="DOB" name="DOB" required><br><br>
-
-    <label for="address">Address:</label>
-    <input type="text" id="address" name="address" required><br><br>
-
-    <label for="EIR_Code">EIR Code:</label>
-    <input type="text" id="EIR_Code" name="EIR_Code" required><br><br>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
-
-    <label for="mobile_Number">Mobile Number:</label>
-    <input type="text" id="mobile_Number" name="mobile_Number" required><br><br>
-
-    <label for="medical_Card_Number">Medical Card Number:</label>
-    <input type="text" id="medical_Card_Number" name="medical_Card_Number" required><br><br>
-
-    <label for="PPSN_Number">PPSN Number:</label>
-    <input type="text" id="PPSN_Number" name="PPSN_Number" required><br><br>
-
-    <label for="previous_GP_Name_and_address">Previous GP Name and Address:</label>
-    <textarea id="previous_GP_Name_and_address" name="previous_GP_Name_and_address" rows="4" required></textarea><br><br>
-
-    <input type="submit" value="Submit">
-</form>
 <body class="body">
 <div class="container regFormContainer">
 <h1 class="text-center mb-5">Registration Form</h1>
 <div class="row">
     <div class="col-9">
-        <form id="registrationForm" class="registrationForm" action="/registration_page/create" method="post">
+        <form id="registrationForm" class="registrationForm" action="/registrationForm/create" method="post">
             <div class="row mb-3">
                 <label for="fullName" class="form-label">Full Name:</label>
                 <input type="text" id="fullName" name="fullName" required class="form-control">
             </div>
             <div class="row mb-3">
-                <label for="DOB" class="form-label">Date of Birth:</label>
-                <input type="date" id="DOB" name="DOB" required class="form-control">
+                <label for="dob" class="form-label">Date of Birth:</label>
+                <input type="date" id="dob" name="dob" required class="form-control">
             </div>
             <div class="row mb-3">
                 <label for="address" class="form-label">Address:</label>
                 <input type="text" id="address" name="address" required class="form-control">
             </div>
             <div class="row mb-3">
-                <label for="EIR_Code" class="form-label">EIR Code:</label>
-                <input type="text" id="EIR_Code" name="EIR_Code" required class="form-control">
+                <label for="eir" class="form-label">EIR Code:</label>
+                <input type="text" id="eir" name="eir" required class="form-control">
             </div>
             <div class="row mb-3">
                 <label for="email" class="form-label">Email:</label>
@@ -74,8 +41,8 @@
                 <input type="text" id="medical_Card_Number" name="medical_Card_Number" required class="form-control">
             </div>
             <div class="row mb-3">
-                <label for="PPSN_Number" class="form-label">PPSN Number:</label>
-                <input type="text" id="PPSN_Number" name="PPSN_Number" required class="form-control">
+                <label for="ppsn" class="form-label">PPSN Number:</label>
+                <input type="text" id="ppsn" name="ppsn" required class="form-control">
             </div>
             <div class="row mb-3">
                 <label for="previous_GP_Name_and_address" class="form-label">Previous GP Name and Address:</label>
@@ -92,6 +59,51 @@
 </div>
 
 </div>
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #F0F0F0;
+            margin: 0;
+            padding: 0;
+        }
+        h1 {
+            text-align: center;
+            margin-top: 20px;
+        }
+        #registrationForm {
+            width: 50%;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        label, input, textarea {
+            display: block;
+            margin-bottom: 10px;
+        }
+        label {
+            font-weight: bold;
+        }
+        input, textarea {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        input[type="submit"] {
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #0056B3;
+        }
+    </style>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 <script type="text/javascript">
@@ -107,6 +119,7 @@
             formObject[key] = value;
         });
         var jsonData = JSON.stringify(formObject);
+        console.error("json_data" + jsonData);
 
         // Send a POST request to the server to save the data
         fetch('/submit', {
