--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -55,16 +55,15 @@
             </div>
         </form>
     </div>
-    <div class="col-3"><img src="girls.jpg" alt="Girl with laptop" ></div>
+    <div class="col-3"><img src="QueueWise.jpg" alt="QueueWise" ></div>
 </div>
 
 </div>
 <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #F0F0F0;
-            margin: 0;
-            padding: 0;
+       body {
+        background-image: url('background-image.jpg');
+        background-size: cover;
+
         }
         h1 {
             text-align: center;
