--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,62 +8,87 @@
 </head>
 <body class="body">
 <div class="container regFormContainer">
-<h1 class="text-center mb-5">Registration Form</h1>
-<div class="row">
-    <div class="col-9">
-        <form id="registrationForm" class="registrationForm" action="/registrationForm/create" method="post">
-            <div class="row mb-3">
-                <label for="fullName" class="form-label">Full Name:</label>
-                <input type="text" id="fullName" name="fullName" required class="form-control">
+    <div class="row">
+        <div class="col-md-6">
+            <!-- Content on the Left -->
+            <img src="left-image.jpg" alt="Left Image">
+            <p>Your text here</p>
+        </div>
+        <div class="text-right mt-3">
+            <!-- Login Button and Line -->
+            <div class="text-center">
+                <hr>
             </div>
-            <div class="row mb-3">
-                <label for="dob" class="form-label">Date of Birth:</label>
-                <input type="date" id="dob" name="dob" required class="form-control">
-            </div>
-            <div class="row mb-3">
-                <label for="address" class="form-label">Address:</label>
-                <input type="text" id="address" name="address" required class="form-control">
-            </div>
-            <div class="row mb-3">
-                <label for="eir" class="form-label">EIR Code:</label>
-                <input type="text" id="eir" name="eir" required class="form-control">
-            </div>
-            <div class="row mb-3">
-                <label for="email" class="form-label">Email:</label>
-                <input type="email" id="email" name="email" required class="form-control">
-            </div>
-            <div class="row mb-3">
-                <label for="mobile_Number" class="form-label">Mobile Number:</label>
-                <input type="text" id="mobile_Number" name="mobile_Number" required class="form-control">
-            </div>
-            <div class="row mb-3">
-                <label for="medical_Card_Number" class="form-label">Medical Card Number:</label>
-                <input type="text" id="medical_Card_Number" name="medical_Card_Number" required class="form-control">
-            </div>
-            <div class="row mb-3">
-                <label for="ppsn" class="form-label">PPSN Number:</label>
-                <input type="text" id="ppsn" name="ppsn" required class="form-control">
-            </div>
-            <div class="row mb-3">
-                <label for="previous_GP_Name_and_address" class="form-label">Previous GP Name and Address:</label>
-                <textarea id="previous_GP_Name_and_address" name="previous_GP_Name_and_address" rows="4" required class="form-control"></textarea>
-            </div>
-            <div class="row mb-3 justify-content-end">
-                <div class="col-auto">
-                    <input type="submit" id="submit" value="Submit" class="btn btn-primary">
+            <button class="btn btn-primary mt-3">Login</button>
+        </div>
+        <div class="col-md-6">
+            <!-- Content in the Center -->
+            <img src="center-image.jpg" alt="Center Image">
+            <p>Your text here</p>
+        </div>
+        <div class="col-md-6">
+            <!--Registration Form         -->
+            <h1 class="text-center mb-5">Registration Form</h1>
+            <form id="registrationForm" class="registrationForm" action="/registrationForm/create" method="post">
+                <div class="row mb-3">
+                    <label for="fullName" class="form-label">Full Name:</label>
+                    <input type="text" id="fullName" name="fullName" required class="form-control">
                 </div>
-            </div>
-        </form>
+                <div class="row mb-3">
+                    <label for="dob" class="form-label">Date of Birth:</label>
+                    <input type="date" id="dob" name="dob" required class="form-control">
+                </div>
+                <div class="row mb-3">
+                    <label for="address" class="form-label">Address:</label>
+                    <input type="text" id="address" name="address" required class="form-control">
+                </div>
+                <div class="row mb-3">
+                    <label for="eir" class="form-label">EIR Code:</label>
+                    <input type="text" id="eir" name="eir" required class="form-control">
+                </div>
+                <div class="row mb-3">
+                    <label for="email" class="form-label">Email:</label>
+                    <input type="email" id="email" name="email" required class="form-control">
+                </div>
+                <div class="row mb-3">
+                    <label for="mobile_Number" class="form-label">Mobile Number:</label>
+                    <input type="text" id="mobile_Number" name="mobile_Number" required class="form-control">
+                </div>
+                <div class="row mb-3">
+                    <label for="medical_Card_Number" class="form-label">Medical Card Number:</label>
+                    <input type="text" id="medical_Card_Number" name="medical_Card_Number" required class="form-control">
+                </div>
+                <div class="row mb-3">
+                    <label for="ppsn" class="form-label">PPSN Number:</label>
+                    <input type="text" id="ppsn" name="ppsn" required class="form-control">
+                </div>
+                <div class="row mb-3">
+                    <label for="previous_GP_Name_and_address" class="form-label">Previous GP Name and Address:</label>
+                    <textarea id="previous_GP_Name_and_address" name="previous_GP_Name_and_address" rows="4" required class="form-control"></textarea>
+                </div>
+                <div class="row mb-3">
+                    <label for="enableNotifications" class="form-label">Enable Notifications:</label>
+                    <input type="checkbox" id="enableNotifications" name="enableNotifications" class="form-check-input">
+                </div>
+                <div class="row mb-3 justify-content-end">
+                    <div class="col-auto">
+                        <input type="submit" id="submit" value="Submit" class="btn btn-primary">
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
-    <div class="col-3"><img src="QueueWise.jpg" alt="QueueWise" ></div>
-</div>
-
 </div>
 <style>
-       body {
-        background-image: url('background-image.jpg');
-        background-size: cover;
-
+        body {
+            font-family: Arial, sans-serif;
+            background-image: url('background-image.jpg'); /* Replace with your background image path */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center center;
+            margin: 0;
+            padding: 0;
         }
         h1 {
             text-align: center;
@@ -102,16 +127,13 @@
         input[type="submit"]:hover {
             background-color: #0056B3;
         }
-    </style>
+</style>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
 <script type="text/javascript">
     document.getElementById("registrationForm").addEventListener("submit", function (event) {
         event.preventDefault(); // Prevent the default form submission
-
         // Collect form data
         var formData = new FormData(this);
-
         // Convert FormData to JSON format
         var formObject = {};
         formData.forEach((value, key) => {
@@ -119,7 +141,6 @@
         });
         var jsonData = JSON.stringify(formObject);
         console.error("json_data" + jsonData);
-
         // Send a POST request to the server to save the data
         fetch('/submit', {
             method: 'POST',
