updated with left align registration form

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,10 @@
     <div class="row">
         <div class="col-md-4">
 
-            <p>Your text here</p>
+            <div><h5>Global Registration</h5></div>
+            <div><h5>Patient-Centred Scheduling</h5></div>
+            <div><h5>Instant Alert</h5></div>
+            <div><h5>Doctor Communication</h5></div>
         </div>
         <div class="col-md-8">
             <!--Registration Form         -->
