--- a/src/main/resources/static/success.html
+++ b/src/main/resources/static/success.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Success</title>
+    <title>Form Submission Successful</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
-    <h1>Registration Successful</h1>
-    <p>Thank you for submitting the registration form. Your information has been successfully saved.</p>
-    <p><a href="/">Return to Home</a></p>
+<body class="body">
+<div class="container successContainer">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h2>Form Submission Successful</h2>
+            <p>Your registration details have been submitted successfully.</p>
+            <p>Thank you for registering with us!</p>
+            <a href="index.html" class="btn btn-primary mt-3">Return to Homepage</a>
+        </div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
