--- a/src/main/resources/static/success.html
+++ b/src/main/resources/static/success.html
@@ -7,12 +7,22 @@
 </head>
 <body class="body">
 <div class="container successContainer">
+    <div id="header" class="row mb-5">
+        <div class="col-md-9">
+            <img src="images/queuewise.jpg" width="150" alt="Queuewise logo">
+            <p class="logo-text">Stay informed stay safe</p>
+        </div>
+        <div class="col-md-3 buttons">
+            <a href="dashboard.html" class="btn btn-primary mt-3">Login</a>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12 text-center">
             <h2>Form Submission Successful</h2>
             <p>Your registration details have been submitted successfully.</p>
             <p>Thank you for registering with us!</p>
             <a href="index.html" class="btn btn-primary mt-3">Return to Homepage</a>
+            <a href="dashboard.html" class="btn btn-primary mt-3">Go to Dashboard</a>
         </div>
     </div>
 </div>
