EnableNotifi feature works with both TRUE and FALSE value and H2 DB receives the same.

--- a/src/main/resources/static/success.html
+++ b/src/main/resources/static/success.html
@@ -10,7 +10,7 @@
     <div id="header" class="row mb-5">
         <div class="col-md-9">
             <img src="images/queuewise.jpg" width="150" alt="Queuewise logo">
-            <p class="logo-text">Stay informed stay safe</p>
+            <p class="logo-text">Stay Informed, Stay Safe</p>
         </div>
         <div class="col-md-3 buttons">
             <a href="dashboard.html" class="btn btn-primary mt-3">Login</a>
