--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
     <div id="header" class="row mb-5">
         <div class="col-md-9">
             <img src="images/queuewise.jpg" width="150" alt="Queuewise logo">
-            <p class="logo-text">Stay informed stay safe</p>
+            <p class="logo-text">Stay Informed, Stay Safe</p>
         </div>
         <div class="col-md-3 buttons">
             <a href="dashboard.html" class="btn btn-primary mt-3">Login</a>
@@ -66,8 +66,8 @@
                 </div>
                 <div class="row mb-3">
                     <div class="form-check">
-                        <label for="enableNotifications" class="form-label">Enable Notifications:</label>
-                        <input type="checkbox" id="enableNotifications" name="enableNotifications" class="form-check-input">
+                        <label for="enableNotifi" class="form-label">Enable Notifications:</label>
+                        <input type="checkbox" id="enableNotifi" name="enableNotifi" class="form-check-input">
                     </div>
                 </div>
                 <div class="row mb-3 justify-content-end">
